<resources>
    <string name="app_name">IMC</string>
    <string name="poids">Poids:</string>
    <string name="taille">Taille:</string>
    <string name="m_tre">Mètre</string>
    <string name="centim_tre">Centimètre</string>
    <string name="mega_fonction">Mega fonction !</string>
    <string name="calculer_l_imc">Calculer l\'IMC</string>
    <string name="raz">RAZ</string>
    <string name="r_sultat">Résultat :</string>
    <string name="vous_devez_cliquer_sur_le_bouton_quot_calculer_l_imc_quot">Vous devez cliquer sur le bouton \"Calculer l\'IMC\"</string>
    <string name="pour_obtenir_un_r_sultat">pour obtenir un résultat.</string>
    <string name="votre_imc_gros">Votre IMC gros :</string>

</resources>
